# gatrr

./: .gitignore  .pre-commit-config.yaml  README.md  deploy_checklist.md
.github/workflows/: ci.yml  deploy.yml  e2e.yml  security.yml  update-server.yml
docs/: architecture.md  deploy.md  howto.md
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts
e2e/src/: loki-helper.ts  runner.ts
e2e/tests/: auth.spec.ts  health.spec.ts  logs.spec.ts  oauth2-proxy.spec.ts
infra/pulumi/: Pulumi.prod.yaml  Pulumi.yaml  eslint.config.mjs  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
infra/pulumi/scripts/: generate-types.ts  load-config.ts  new-pulumi-cloud.ts  new-stack.ts
infra/pulumi/src/: build.test.ts  config.ts  constants.ts  index.ts  network.ts  types.ts
infra/pulumi/src/deployment-config/: index.ts  inference.test.ts  inference.ts  loader.test.ts  loader.ts  protected-services.test.ts  (+7 more)
infra/state/: README.md
portal/: Cargo.toml  Dockerfile  package-lock.json  package.json
portal/src/: config.rs  lib.rs  main.rs
portal/src/assets/: logos.rs  mod.rs
portal/src/auth/: extractors.rs  handlers.rs  helpers.rs  jwt.rs  mod.rs
portal/src/services/: authz.rs  descriptor.rs  descriptor_gen.rs  mod.rs  models.rs
portal/src/web/: handlers.rs  mod.rs  routes.rs  templates.rs
portal/static/css/: styles.css
portal/templates/: dashboard.html  landing.html
portal/tools/: generate_types.rs
schema/: portal-descriptor.schema.json
scripts/: deploy-remote.sh  server-bootstrap-ubuntu.sh  ssh-deploy-entrypoint.sh
(+23 files in other folders)
