[package]
name = "portal"
version = "20255.1.0"
edition = "2021"

[[bin]]
name = "generate-types"
path = "tools/generate_types.rs"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
askama = "0.14"
tower-http = { version = "0.6", features = ["fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
fastrand = "2"
url = "2"
oauth2 = "5"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
reqwest = { version = "0.12", features = ["json"] }
md5 = "0.7"
urlencoding = "2"
